Sun Aug 5 05:37:54 EDT 2007 J Phelps <godless@users.sf.net>
	* editor_selection.cpp: Changed the '<' operators in
	for-loops in this file back to <=, which they were
	previously, to correct a bug with selections in the
	Pattern Editor.
Sat Aug 4 21:01:54 EDT 2007 J Phelps <godless@users.sf.net>
	* player_rt_keyboard.cpp
	(find_empty_channel,find_note_in_channel,instrument_stop_all):
	Reversed the order of "for" loops here, so that notes played
	with the "live" keyboard occupy the last channels, instead of
	the first. This way, the live keyboard does not get trampled on
	by the notes in a song, therefore making it possible to play
	the live keyboard alongside a song.
Sat Aug 4 19:37:45 EDT 2007 J Phelps <godless@users.sf.net>
	* tracker_voice.cpp(add_to_mix_buffer): Changed
	"info.lvolsel=vol" to "info.lvolsel=vol/2.0". I don't
	remember why this was changed, and it caused a bug. The
	change happened before I started keeping this ChangeLog,
	and before I started using SVN.
Sat Aug 4 18:51:28 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data.cpp(get_sample_for_cosine_mixer,
	do_cubic_mixer_voodoo, get_sample_for_linear_mixer):
	Reintroduced blank-sample generation when these are called
	with Sample_Data::eof_reached() == true. Necessary now that
	fixedpoint_move_cursor no longer ensures that the cursor will
	stay within bounds.

	* sample_data.cpp(blank_sample): Changed "zero" from being a
	template argument to a function argument, because GCC 4.1.2
	can't compile this template if TYPE==float.
	
Sat Aug 4 18:26:52 EDT 2007 J Phelps <godless@users.sf.net>
	* tracker_voice.cpp(add_to_mix_buffer): Samples no longer
	continue playing past the end.
Sat Aug 4 18:08:08 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data_fixedpoint.h(fixedpoint_move_cursor): Removed
	bounds checking, as this is handled in fixedpoint_loop.
Sat Aug 4 15:21:40 EDT 2007 J Phelps <godless@users.sf.net>
	* resample_kernel.cpp (mix_sample): Fixed a math bug that caused